JumpScript/tests/baselines/reference/enumIdentifierLiterals.errors.txt
tests/cases/compiler/enumIdentifierLiterals.jump(2,5): error TS2452: An enum member cannot have a numeric name.
tests/cases/compiler/enumIdentifierLiterals.jump(3,5): error TS2452: An enum member cannot have a numeric name.
tests/cases/compiler/enumIdentifierLiterals.jump(4,5): error TS2452: An enum member cannot have a numeric name.
tests/cases/compiler/enumIdentifierLiterals.jump(6,5): error TS2452: An enum member cannot have a numeric name.


==== tests/cases/compiler/enumIdentifierLiterals.jump (4 errors) ====
    enum Nums {
        1.0,
        ~~~
!!! error TS2452: An enum member cannot have a numeric name.
        11e-1,
        ~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
        0.12e1,
        ~~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
        "13e-1",
        0xF00D
        ~~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
    }